WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
136201
TypeProfiler search breaks on return statements
https://bugs.webkit.org/show_bug.cgi?id=136201
Summary
TypeProfiler search breaks on return statements
Saam Barati
Reported
2014-08-24 10:53:07 PDT
Currently, searching for all TypeLocations in TypeProfiler breaks when looking for an actual return statement in the source text of a function. This breaks because we ask that the search descriptor be a function return statement, but this descriptor should be a function return statement only when we ask for the global return statement of a function (i.e the merged types of all return statements), not when we are asking for the type information for an actual return statement in the source code of a function. i.e: function foo() { return bar }; when asking for type information for "return bar", we should not require the search descriptor to be `function return descriptor`.
Attachments
patch
(5.78 KB, patch)
2014-08-25 10:55 PDT
,
Saam Barati
no flags
Details
Formatted Diff
Diff
patch
(5.79 KB, patch)
2014-08-25 20:35 PDT
,
Saam Barati
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Saam Barati
Comment 1
2014-08-25 10:55:08 PDT
Created
attachment 237094
[details]
patch Fixes TypeProfiler search.
Saam Barati
Comment 2
2014-08-25 20:35:47 PDT
Created
attachment 237130
[details]
patch Patch can now be applied to ToT
Filip Pizlo
Comment 3
2014-08-25 20:57:27 PDT
Comment on
attachment 237130
[details]
patch r=me
WebKit Commit Bot
Comment 4
2014-08-25 21:36:59 PDT
Comment on
attachment 237130
[details]
patch Clearing flags on attachment: 237130 Committed
r172950
: <
http://trac.webkit.org/changeset/172950
>
WebKit Commit Bot
Comment 5
2014-08-25 21:37:02 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug